--- a/index.html
+++ b/index.html
@@ -312,7 +312,12 @@
         <h3>Parabéns, ${primeiroNome}!</h3><p>Seu plano de dieta foi personalizado com sucesso.</p>`;
     }
   </script>
-
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "p2prbym8h4");
+</script>
 </body>
-
 </html>
